--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DesignPrototype"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="BPlay" Height="630" Width="900"
+        Title="StuffaDJ" Height="630" Width="900"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         Background="#FF303030"
         TextElement.FontWeight="Medium"
@@ -62,7 +62,7 @@
             <Image x:Name="closeButton" Grid.Column="3" Height="30" VerticalAlignment="Top" Source="img/close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
             <Image x:Name="maximizeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.5"/>
             <Image x:Name="minimizeButton" Grid.Column="1" Height="30" VerticalAlignment="Top" Source="img/ic_remove_white_48dp.png" MouseUp="minimizeUp" Opacity="0.5" MouseEnter="minimizeEnter" MouseDown="minimizeDown" MouseLeave="minimizeLeave"/>
-            <TextBlock x:Name="Title" Text="BPlay" HorizontalAlignment="Left" Margin="26,3.733,0,4.986" VerticalAlignment="Center" MouseMove="dragWindow" MouseLeave="setTitle" MouseEnter="smilie" FontSize="16" FontWeight="Normal" FontFamily="Segoe UI Emoji"/>
+            <TextBlock x:Name="Title" Text="StuffaDJ" HorizontalAlignment="Left" Margin="26,3.733,0,4.986" VerticalAlignment="Center" MouseMove="dragWindow" MouseLeave="setTitle" MouseEnter="smilie" FontSize="16" FontWeight="Normal" FontFamily="Segoe UI Emoji"/>
 
 
         </Grid>
